syntax = "proto3";

package chat;

option go_package = "./proto/chat";


service ChatService{
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
  rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse);
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse);
}

message Message {
  string id = 1;
  string room_id = 2;
  string user_id = 3;
  string username = 4;
  string content = 5;
  int64 timestamp = 6;
}

message Room {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated string members = 4;
  int64 created_at = 5;
}

message SendMessageRequest {
  string room_id = 1;
  string content = 2;
  string token = 3;
}

message SendMessageResponse {
  Message message = 1;
}

message GetMessagesRequest {
  string room_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  string token = 4;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message GetRoomsRequest {
  string token = 1;
}

message GetRoomsResponse {
  repeated Room rooms = 1;
}

message CreateRoomRequest {
  string name = 1;
  string description = 2;
  string token = 3;
}

message CreateRoomResponse {
  Room room = 1;
}

message JoinRoomRequest {
  string room_id = 1;
  string token = 2;
}

message JoinRoomResponse {
  bool success = 1;
}